# psyconstruct

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README_main.md  __init__.py  config.py  paper.bib  paper.md  prd.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
constructs/: __init__.py  aggregator.py  registry.json  registry.py  registry.yaml
docs/: api_reference.md  comprehensive_documentation.md  practical_examples.md  scientific_background.md
examples/: activity_timing_variance_example.py  app_usage_breadth_example.py  avoidance_features_example.py  behavioral_activation_example.py  config_example.py  construct_aggregation_example.py  harmonization_example.py  location_diversity_example.py  provenance_example.py  registry_example.py  routine_stability_example.py  social_engagement_example.py
features/: __init__.py  avoidance.py  behavioral_activation.py  routine_stability.py  social_engagement.py
preprocessing/: __init__.py  harmonization.py
tests/: __init__.py  test_aggregator.py  test_avoidance.py  test_behavioral_activation.py  test_config.py  test_edge_cases.py  test_harmonization.py  test_provenance.py  test_registry.py  test_routine_stability.py  test_social_engagement.py
utils/: __init__.py  adaptive_quality.py  provenance.py
