[build-system]
requires = ["setuptools>=60.0.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psyconstruct"
version = "1.0.0"
description = "A reproducible framework for theory-informed digital phenotyping research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dhanumjaya Reddy Bhavanam", email = "dhanumjayareddybhavanam@gmail.com"}
]
maintainers = [
    {name = "Dhanumjaya Reddy Bhavanam", email = "dhanumjayareddybhavanam@gmail.com"}
]
keywords = [
    "digital phenotyping",
    "psychological measurement",
    "behavioral analysis",
    "computational social science",
    "mobile sensing",
    "smartphone data",
    "research methodology",
    "data science",
    "behavioral activation",
    "avoidance",
    "social engagement",
    "routine stability"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Natural Language :: English",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "python-dateutil>=2.8.0",
    "scipy>=1.9.0",
    "geopy>=2.2.0",
    "haversine>=2.7.0",
    "scikit-learn>=1.1.0",
    "statsmodels>=0.13.0",
    "pydantic>=1.10.0",
    "jsonschema>=4.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "structlog>=22.1.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.8.0",
    "pytest-xdist>=2.5.0",
    "pytest-benchmark>=3.4.0",
    "pytest-asyncio>=0.19.0",
    "faker>=15.0.0",
    "hypothesis>=6.45.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "flake8-docstrings>=1.6.0",
    "flake8-import-order>=0.18.0",
    "mypy>=0.971",
    "bandit>=1.7.0",
    "safety>=2.1.0",
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.17.0",
    "myst-parser>=0.18.0",
    "sphinxcontrib-napoleon>=0.7",
    "jupyter>=1.0.0",
    "ipykernel>=6.15.0",
    "ipywidgets>=7.7.0",
    "notebook>=6.4.0",
    "memory-profiler>=0.60.0",
    "line-profiler>=3.5.0",
    "py-spy>=0.3.12",
    "ipdb>=0.13.9",
    "pdb++>=0.10.2",
    "pre-commit>=2.17.0",
    "build>=0.8.0",
    "twine>=4.0.0",
    "wheel>=0.37.0",
    "setuptools>=60.0.0",
    "bump2version>=1.0.1",
    "tox>=3.24.0",
    "coverage>=6.2",
    "rich>=12.5.0",
    "loguru>=0.6.0",
    "psutil>=5.9.0",
    "py-cpuinfo>=8.0.0",
    "seaborn>=0.11.0",
    "plotly>=5.10.0",
    "jupyterlab>=3.4.0",
    "mlflow>=1.27.0",
    "optuna>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.8.0",
    "pytest-xdist>=2.5.0",
    "faker>=15.0.0",
    "hypothesis>=6.45.0",
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.17.0",
    "myst-parser>=0.18.0",
    "sphinxcontrib-napoleon>=0.7",
]
geospatial = [
    "shapely>=1.8.0",
    "geopandas>=0.11.0",
]
ml = [
    "xgboost>=1.6.0",
    "lightgbm>=3.3.0",
    "mlflow>=1.27.0",
    "optuna>=3.0.0",
]
database = [
    "sqlalchemy>=1.4.0",
    "alembic>=1.8.0",
    "psycopg2-binary>=2.9.0",
    "pymongo>=4.2.0",
]
cloud = [
    "boto3>=1.24.0",
    "google-cloud-storage>=2.5.0",
]
api = [
    "fastapi>=0.78.0",
    "uvicorn>=0.18.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.15.0",
    "ipywidgets>=7.7.0",
    "notebook>=6.4.0",
    "jupyterlab>=3.4.0",
]
visualization = [
    "seaborn>=0.11.0",
    "plotly>=5.10.0",
    "rich>=12.5.0",
]
performance = [
    "memory-profiler>=0.60.0",
    "line-profiler>=3.5.0",
    "py-spy>=0.3.12",
]
security = [
    "bandit>=1.7.0",
    "safety>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/dhanumjayareddybhavanam/psyconstruct"
Documentation = "https://psyconstruct.readthedocs.io/"
Repository = "https://github.com/dhanumjayareddybhavanam/psyconstruct"
"Bug Tracker" = "https://github.com/dhanumjayareddybhavanam/psyconstruct/issues"
Changelog = "https://github.com/dhanumjayareddybhavanam/psyconstruct/blob/main/CHANGELOG.md"


[tool.setuptools]
packages = ["psyconstruct", "psyconstruct.features", "psyconstruct.constructs", "psyconstruct.utils", "psyconstruct.preprocessing"]

[tool.setuptools.package-data]
psyconstruct = [
    "data/*.json",
    "data/*.yaml",
    "data/*.yml",
    "constructs/registry.json",
    "constructs/registry.yaml",
]

[tool.setuptools.exclude-package-data]
psyconstruct = ["tests/*", "setup.py"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["psyconstruct"]
known_third_party = ["pandas", "numpy", "scipy", "sklearn"]
skip_glob = ["*/migrations/*"]

# mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "geopy.*",
    "haversine.*",
    "geopandas.*",
    "shapely.*",
    "sklearn.*",
    "scipy.*",
    "statsmodels.*",
    "seaborn.*",
    "plotly.*",
]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["psyconstruct/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=psyconstruct",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmarks",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["psyconstruct"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101", "B601"]

# Flake8 configuration (in setup.cfg or .flake8 file)
# [flake8]
# max-line-length = 88
# extend-ignore = E203, W503
# exclude = 
#     .git,
#     __pycache__,
#     build,
#     dist,
#     .eggs,
#     *.egg-info,
#     .venv,
#     venv,
#     .tox

# Bump2version configuration
[tool.bumpversion]
current_version = "1.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "psyconstruct/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

# Tox configuration (in tox.ini file)
# [tox]
# envlist = py38,py39,py310,py311,flake8,mypy,bandit
# isolated_build = true
# 
# [testenv]
# deps = 
#     pytest
#     pytest-cov
#     pytest-mock
# commands = pytest {posargs}
# 
# [testenv:flake8]
# deps = flake8
# commands = flake8 psyconstruct
# 
# [testenv:mypy]
# deps = mypy
# commands = mypy psyconstruct
# 
# [testenv:bandit]
# deps = bandit
# commands = bandit -r psyconstruct
